fixed hero alignment with header

--- a/lecture-practice/4th-week/style.css
+++ b/lecture-practice/4th-week/style.css
@@ -145,11 +145,11 @@ a {
 }
 
 .hero__content {
-  position: absolute;
   top: 0;
   width: 100%;
   height: 100%;
   padding: 0 24px;
+  margin: 0 auto;
 }
 
 .hero__content-inner {
@@ -180,15 +180,20 @@ a {
 }
 
 @media screen and (min-width: 768px) {
-  .hero__content-inner {
+  .hero__content {
     padding: 0 32px;
     max-width: 930px;
   }
 }
 
 @media screen and (min-width: 1024px) {
-  .hero__content-inner {
+  .hero__content {
     padding: 0;
+  }
+}
+
+@media screen and (min-width: 1300px) {
+  .hero__content {
     max-width: 1280px;
   }
 }
